--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node
+      - image: node:14.15.0-alpine3.10
+    resource_class: small
     working_directory: ~/ui
     steps:
       - checkout
