--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,18 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+  node: circleci/node@4.1.0
 jobs:
-  build:
-    docker:
-      - image: node:14.15.0-alpine3.10
+  test:
+    executor: node/default
+
     resource_class: small
     working_directory: ~/project/ui
     steps:
       - checkout
-      - run: npm install
-      - run: npm test
+      - run: ls
+      - run: pwd
+      - node/install-packages:
+          cache-path: ~/project/ui/node_modules
+          override-ci-command: npm install
+      - run: npm run test
