--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run: ls
       - run: pwd
       - node/install-packages:
-          cache-path: ~/project/ui/node_modules
+          cache-path: ./node_modules
           override-ci-command: npm install
       - run: npm run test
 workflows:
