--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint src/**/*.js",
+    "scan": "npm audit",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
