--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,40 @@ jobs:
           path: ./reports/junit
       - store_artifacts:
           path: ./reports/junit
+  test-api:
+    executor: node/default
+
+    resource_class: small
+    working_directory: ~/project/api
+    steps:
+      - checkout:
+          path: ~/project
+      - run:
+          name: Install JUnit coverage reporter
+          command: npm install --dev jest-junit
+      - node/install-packages:
+          cache-path: ~/project/api/node_modules
+          override-ci-command: npm install
+      - run:
+          name: Run linter
+          command: npm run lint
+          environment:
+              JEST_JUNIT_OUTPUT_DIR: ./reports/junit
+      - run:
+          name: Run security scan
+          command: npm run scan
+      - run:
+          name: Run tests
+          command: npm run test -- --ci --runInBand --reporters=default --reporters=jest-junit
+          environment:
+              JEST_JUNIT_OUTPUT_DIR: ./reports/junit
+      - store_test_results:
+          path: ./reports/junit
+      - store_artifacts:
+          path: ./reports/junit
+
 workflows:
   test:
     jobs:
       - test-ui
+      - test-api
