--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,90 +1,114 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 orbs:
-  node: circleci/node@4.1.0
+    node: circleci/node@4.1.0
 jobs:
-  test-ui:
-    executor: node/default
-
-    resource_class: small
-    working_directory: ~/project/ui
-    steps:
-      - checkout:
-          path: ~/project
-      - restore_cache:
-          keys:
-            - dependencies-{{ checksum "package.json " }}
-            - dependencies-
-      - run:
-          name: Install JUnit coverage reporter
-          command: npm install --dev jest-junit
-      - node/install-packages:
-          cache-path: ~/project/ui/node_modules
-          override-ci-command: npm install
-      - save_cache:
-          paths:
-            - node_modules
-            - ~/.npm
-            - ~/.cache
-          key: dependencies-{{ checksum "package.json" }}
-      - run:
-          name: Run linter
-          command: npm run lint
-          environment:
-              JEST_JUNIT_OUTPUT_DIR: ./reports/junit
-      - run:
-          name: Run security scan
-          command: npm run scan
-      - run:
-          name: Run tests
-          command: npm run test -- --ci --runInBand --reporters=default --reporters=jest-junit
-          environment:
-              JEST_JUNIT_OUTPUT_DIR: ./reports/junit
-      - store_test_results:
-          path: ./reports/junit
-      - store_artifacts:
-          path: ./reports/junit
-  test-api:
-    executor: node/default
-
-    resource_class: small
-    working_directory: ~/project/api
-    steps:
-      - checkout:
-          path: ~/project
-      - run:
-          name: Install JUnit coverage reporter
-          command: npm install --dev jest-junit
-      - node/install-packages:
-          cache-path: ~/project/api/node_modules
-          override-ci-command: npm install
-      - run:
-          name: Run linter
-          command: npm run lint
-          environment:
-              JEST_JUNIT_OUTPUT_DIR: ./reports/junit
-      - run:
-          name: Run security scan
-          command: npm run scan
-      - run:
-          name: Run tests
-          command: npm run test -- --ci --runInBand --reporters=default --reporters=jest-junit
-          environment:
-              JEST_JUNIT_OUTPUT_DIR: ./reports/junit
-      - store_test_results:
-          path: ./reports/junit
-      - store_artifacts:
-          path: ./reports/junit
+    test-ui:
+        executor: node/default
+        resource_class: small
+        working_directory: ~/project/ui
+        steps:
+            -
+                checkout:
+                    path: ~/project
+            -
+                restore_cache:
+                    keys:
+                        - 'dependencies-{{ checksum "package.json " }}'
+                        - dependencies-
+            -
+                run:
+                    name: Install JUnit coverage reporter
+                    command: npm install --dev jest-junit
+            -
+                node/install-packages:
+                    cache-path: ~/project/ui/node_modules
+                    override-ci-command: npm install
+            -
+                save_cache:
+                    paths:
+                        - node_modules
+                        - ~/.npm
+                        - ~/.cache
+                    key: 'dependencies-{{ checksum "package.json" }}'
+            -
+                run:
+                    name: Run linter
+                    command: npm run lint
+                    environment:
+                        JEST_JUNIT_OUTPUT_DIR: ./reports/junit
+            -
+                run:
+                    name: Run security scan
+                    command: npm run scan
+            -
+                run:
+                    name: Run tests
+                    command: >-
+                        npm run test -- --ci --runInBand --reporters=default
+                        --reporters=jest-junit
+                    environment:
+                        JEST_JUNIT_OUTPUT_DIR: ./reports/junit
+            -
+                store_test_results:
+                    path: ./reports/junit
+            -
+                store_artifacts:
+                    path: ./reports/junit
+    test-api:
+        executor: node/default
+        resource_class: small
+        working_directory: ~/project/api
+        steps:
+            -
+                checkout:
+                    path: ~/project
+            -
+                run:
+                    name: Install JUnit coverage reporter
+                    command: npm install --dev jest-junit
+            -
+                node/install-packages:
+                    cache-path: ~/project/api/node_modules
+                    override-ci-command: npm install
+            -
+                run:
+                    name: Run linter
+                    command: npm run lint
+                    environment:
+                        JEST_JUNIT_OUTPUT_DIR: ./reports/junit
+            -
+                run:
+                    name: Run security scan
+                    command: npm run scan
+            -
+                run:
+                    name: Run tests
+                    command: >-
+                        npm run test -- --ci --runInBand --reporters=default
+                        --reporters=jest-junit
+                    environment:
+                        JEST_JUNIT_OUTPUT_DIR: ./reports/junit
+            -
+                store_test_results:
+                    path: ./reports/junit
+            -
+                store_artifacts:
+                    path: ./reports/junit
     test-hardware:
+        executor: 
+        resource_class: small
+        working_directory: ~/project/hardware
         override:
-            - pio run
-            - pio test
+            - pio run -e native
+
 workflows:
-  test:
-    jobs:
-      - test-ui
-      - test-api
-      - test-hardware:
-            pre-steps:
-                - run:
-                    command: sudo pip install -U platformio
+    test:
+        jobs:
+            - test-ui
+            - test-api
+            -
+                test-hardware:
+                    pre-steps:
+                        -
+                            run:
+                                command: sudo pip install -U platformio
