--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,8 @@ jobs:
     docker:
       - image: suculent/platformio-docker-build
     resource_class: small
+    machine:
+      docker_layer_caching: true
     working_directory: ~/project/hardware
     steps:
       - checkout:
