--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -12,3 +12,12 @@
 platform = atmelsam
 board = adafruit_feather_m0
 framework = arduino
+lib_deps = 
+	SPI
+	adafruit/Adafruit PM25 AQI Sensor@^1.0.4
+	adafruit/Adafruit Zero DMA Library@^1.0.8
+	adafruit/Adafruit BME680 Library@^1.1.1
+	adafruit/Adafruit BusIO@^1.6.0
+	adafruit/Adafruit SI1145 Library@^1.1.1
+
+
